# web-persona-skill

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SECURITY.md  SKILL.md  USAGE.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/book_notes/: part1_人物角色介绍.md  part3c_衡量成果.md
persona/: __init__.py  config.py  design.py  interview.py  measure.py  persona_builder.py  segment.py  strategy.py  survey.py  templates.py  utils.py
persona/tests/: test_all.py
references/: 01-persona-basics.md  02-measuring-results.md  03-persona-best-practices.md  04-persona-driven-workflows.md  05-ecosystem-collaboration.md  README.md
