[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-persona-skill"
version = "1.0.0"
description = "Web Persona 人物角色创建与应用工具包 - 基于《赢在用户》"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "AliDujie"}]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
include = ["persona*"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
